<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="author">Netology. IT University</string>
    <string name="published">05 march in 20:50</string>
    <string name="postText" translatable="false">Привет, это новая Нетология! Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!Привет, это новая Нетология!  </string>
    <string name="authorHeadline">Netology. IT University</string>
    <string name="likesNumber" translatable="false">25</string>
    <string name="sharedNum" translatable="false">16</string>
    <string name="viewsNumber" translatable="false">536</string>
    <string name="remove">Remove</string>
    <string name="post_text">Type your text here...</string>
    <string name="edit">Edit</string>
    <string name="error_empty_content">This field can not be empty</string>
    <string name="edit_bar_text">Edit</string>
    <string name="edit_post_nnetology">Edit post \nNetology</string>
</resources>